add power port module with integration tests

--- a/tests/integration/targets/latest/tasks/main.yml
+++ b/tests/integration/targets/latest/tasks/main.yml
@@ -101,6 +101,9 @@
 - name: "NETBOX_POWER_FEED TESTS"
   include_tasks: "netbox_power_feed.yml"
 
+- name: "NETBOX_POWER_PORT TESTS"
+  include_tasks: "netbox_power_port.yml"
+
 - name: "NETBOX_SERVICE TESTS"
   include_tasks: "netbox_service.yml"
 
