--- a/tests/integration/targets/latest/tasks/main.yml
+++ b/tests/integration/targets/latest/tasks/main.yml
@@ -104,6 +104,9 @@
 - name: "NETBOX_POWER_PORT TESTS"
   include_tasks: "netbox_power_port.yml"
 
+- name: "NETBOX_POWER_PORT_TEMPLATE TESTS"
+  include_tasks: "netbox_power_port_template.yml"
+
 - name: "NETBOX_SERVICE TESTS"
   include_tasks: "netbox_service.yml"
 
