--- a/tests/integration/targets/latest/tasks/main.yml
+++ b/tests/integration/targets/latest/tasks/main.yml
@@ -101,6 +101,12 @@
 - name: "NETBOX_REAR_PORT_TEMPLATE TESTS"
   include_tasks: "netbox_rear_port_template.yml"
 
+- name: "NETBOX_FRONT_PORT TESTS"
+  include_tasks: "netbox_front_port.yml"
+
+- name: "NETBOX_FRONT_PORT_TEMPLATE TESTS"
+  include_tasks: "netbox_front_port_template.yml"
+
 - name: "NETBOX_SERVICE TESTS"
   include_tasks: "netbox_service.yml"
 
