New Modules: Add modules for power management (#235)

--- a/tests/integration/targets/latest/tasks/main.yml
+++ b/tests/integration/targets/latest/tasks/main.yml
@@ -95,6 +95,24 @@
 - name: "NETBOX_CIRCUIT_TERMINATION TESTS"
   include_tasks: "netbox_circuit_termination.yml"
 
+- name: "NETBOX_POWER_PANEL TESTS"
+  include_tasks: "netbox_power_panel.yml"
+
+- name: "NETBOX_POWER_FEED TESTS"
+  include_tasks: "netbox_power_feed.yml"
+
+- name: "NETBOX_POWER_PORT TESTS"
+  include_tasks: "netbox_power_port.yml"
+
+- name: "NETBOX_POWER_PORT_TEMPLATE TESTS"
+  include_tasks: "netbox_power_port_template.yml"
+
+- name: "NETBOX_POWER_OUTLET TESTS"
+  include_tasks: "netbox_power_outlet.yml"
+
+- name: "NETBOX_POWER_OUTLET_TEMPLATE TESTS"
+  include_tasks: "netbox_power_outlet_template.yml"
+
 - name: "NETBOX_SERVICE TESTS"
   include_tasks: "netbox_service.yml"
 
