New Modules: Add modules for front/rear port management (#237)

--- a/tests/integration/targets/latest/tasks/main.yml
+++ b/tests/integration/targets/latest/tasks/main.yml
@@ -95,6 +95,18 @@
 - name: "NETBOX_CIRCUIT_TERMINATION TESTS"
   include_tasks: "netbox_circuit_termination.yml"
 
+- name: "NETBOX_REAR_PORT TESTS"
+  include_tasks: "netbox_rear_port.yml"
+
+- name: "NETBOX_REAR_PORT_TEMPLATE TESTS"
+  include_tasks: "netbox_rear_port_template.yml"
+
+- name: "NETBOX_FRONT_PORT TESTS"
+  include_tasks: "netbox_front_port.yml"
+
+- name: "NETBOX_FRONT_PORT_TEMPLATE TESTS"
+  include_tasks: "netbox_front_port_template.yml"
+
 - name: "NETBOX_CONSOLE_PORT TESTS"
   include_tasks: "netbox_console_port.yml"
 
