Attempting to figure out difference between 2.7 failing and 2.8 passing

--- a/tests/integration/targets/regression/tasks/main.yml
+++ b/tests/integration/targets/regression/tasks/main.yml
@@ -73,6 +73,7 @@
             - second
             - first
       register: test_four
+      diff: yes
 
     - name: "4 - Assert not changed - Tests #242 is fixed"
       assert:
