--- a/tests/integration/targets/regression/tasks/main.yml
+++ b/tests/integration/targets/regression/tasks/main.yml
@@ -101,5 +101,5 @@
       assert:
         that:
           - test_five is changed
-          - test_five["diff"]["after"]["tags"] == ["second", "third", "first"]
-          - test_five["device"]["tags"] == ["second", "third", "first"]
+          - test_five["diff"]["after"]["tags"] == ["first", "second", "third"]
+          - test_five["device"]["tags"] == ["first", "second", "third"]
