add virtual_chassis module with corresponding tests; add virtual_chassis settings to device module

--- a/tests/integration/targets/latest/tasks/main.yml
+++ b/tests/integration/targets/latest/tasks/main.yml
@@ -137,6 +137,9 @@
 - name: "NETBOX_POWER_OUTLET_TEMPLATE TESTS"
   include_tasks: "netbox_power_outlet_template.yml"
 
+- name: "NETBOX_VIRTUAL_CHASSIS TESTS"
+  include_tasks: "netbox_virtual_chassis.yml"
+
 - name: "NETBOX_SERVICE TESTS"
   include_tasks: "netbox_service.yml"
 
