Added required params device_type and device_role

--- a/tests/integration/targets/latest/tasks/netbox_device.yml
+++ b/tests/integration/targets/latest/tasks/netbox_device.yml
@@ -230,6 +230,8 @@
     netbox_token: "0123456789abcdef0123456789abcdef01234567"
     data:
       name: "Router10"
+      device_type: "Cisco Test"
+      device_role: "Core Switch"
       local_context_data: {'bgp_as': '64512'}
     state: present
   delegate_to: localhost
@@ -242,6 +244,8 @@
       - test_nine['diff']['before']['state'] == "absent"
       - test_nine['diff']['after']['state'] == "present"
       - test_nine['device']['name'] == "Router10"
+      - test_nine['device']['device_role'] == 1
+      - test_nine['device']['device_type'] == 1
       - test_nine['device']['local_context_data']['bgp_as'] == "64512"
       - test_nine['device']['status'] == "active"
       - test_nine['msg'] == "Device Router10 created"
