--- a/tests/integration/targets/inventory/files/test-inventory-options-flatten.yml
+++ b/tests/integration/targets/inventory/files/test-inventory-options-flatten.yml
@@ -6,6 +6,7 @@ validate_certs: False
 config_context: True
 flatten_config_context: True
 flatten_custom_fields: True
+flatten_local_context_data: True
 plurals: False
 interfaces: True
 services: True
