--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ jobs:
         - pip install -U pip "setuptools>=46.1.3"
         # coverage 5.0 is not compatible with ansible-test https://github.com/ansible/ansible/issues/65907
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox cryptography codecov jmespath jsondiff ansible
+        - pip install requests pynetbox cryptography codecov jmespath jsondiff ansible
 
     - name: "Python 3.6 - Netbox 2.7 - Latest PyPi Ansible"
       python: 3.6
@@ -47,7 +47,7 @@ jobs:
         - cd ..
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox cryptography codecov jmespath jsondiff ansible
+        - pip install requests pynetbox cryptography codecov jmespath jsondiff ansible
 
     # Stick to python 3.7 instead of 3.8, as ansible-test sanity is not compatible with 3.7
     # https://github.com/ansible/ansible/issues/67118
@@ -66,7 +66,7 @@ jobs:
         - cd ..
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox cryptography codecov jmespath jsondiff ansible
+        - pip install requests pynetbox cryptography codecov jmespath jsondiff ansible
 
     # Latest development versions of Netbox and Ansible, newest Python
     # This may be broken sometimes by changes in the netbox & ansible projects
@@ -84,7 +84,7 @@ jobs:
         - cd ..
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox cryptography jmespath jsondiff
+        - pip install requests pynetbox cryptography jmespath jsondiff
         - git clone https://github.com/ansible/ansible.git
         - cd ansible
         - source hacking/env-setup
