--- a/tests/integration/targets/latest/tasks/netbox_device.yml
+++ b/tests/integration/targets/latest/tasks/netbox_device.yml
@@ -62,6 +62,8 @@
     data:
       name: "R1"
       serial: "FXS1001"
+      local_context_data:
+        bgp_as: "65412"
       virtual_chassis: "Test Nexus One"
       vc_position: 2
       vc_priority: 15
@@ -73,6 +75,7 @@
     that:
       - test_three is changed
       - test_three['diff']['after']['serial'] == "FXS1001"
+      - test_three['diff']['after']['local_context_data']["bgp_as"] == "65412"
       - test_three['diff']['after']['virtual_chassis'] == 1
       - test_three['diff']['after']['vc_position'] == 2
       - test_three['diff']['after']['vc_priority'] == 15
@@ -82,6 +85,7 @@
       - test_three['device']['site'] == 1
       - test_three['device']['status'] == "staged"
       - test_three['device']['serial'] == "FXS1001"
+      - test_three['device']['local_context_data']["bgp_as"] == "65412"
       - test_three['device']['virtual_chassis'] == 1
       - test_three['device']['vc_position'] == 2
       - test_three['device']['vc_priority'] == 15
@@ -109,6 +113,7 @@
       - test_three_dot_one['device']['site'] == 1
       - test_three_dot_one['device']['status'] == "staged"
       - test_three_dot_one['device']['serial'] == "FXS1001"
+      - test_three_dot_one['device']['local_context_data']["bgp_as"] == "65412"
       - test_three_dot_one['msg'] == "device R1-changed-name updated"
 
 - name: "4 - Create device with tags and assign to rack"
