--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ jobs:
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
         - pip install requests pynetbox cryptography codecov jmespath jsondiff ansible
+        - pip list
 
     # Latest development versions of Netbox and Ansible, newest Python
     # This may be broken sometimes by changes in the netbox & ansible projects
