--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ jobs:
         - cd ..
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox==4.3.3 cryptography codecov jmespath jsondiff ansible
+        - pip install pynetbox cryptography codecov jmespath jsondiff ansible
 
     # Stick to python 3.7 instead of 3.8, as ansible-test sanity is not compatible with 3.7
     # https://github.com/ansible/ansible/issues/67118
@@ -49,7 +49,7 @@ jobs:
         - cd ..
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox==4.3.3 cryptography codecov jmespath jsondiff ansible
+        - pip install pynetbox cryptography codecov jmespath jsondiff ansible
 
     # Latest development versions of Netbox and Ansible, newest Python
     # This may be broken sometimes by changes in the netbox & ansible projects
@@ -67,7 +67,7 @@ jobs:
         - cd ..
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox==4.3.3 cryptography jmespath jsondiff
+        - pip install pynetbox cryptography jmespath jsondiff
         - git clone https://github.com/ansible/ansible.git
         - cd ansible
         - source hacking/env-setup
