Fix new test failures due to adding new interfaces

--- a/tests/integration/targets/regression/tasks/main.yml
+++ b/tests/integration/targets/regression/tasks/main.yml
@@ -122,15 +122,15 @@
     - name: "6 - Assert device type is correct - Fixes #282"
       assert:
         that:
-          - test_six.results[0]["diff"]["state"]["before"] == "absent"
-          - test_six.results[0]["diff"]["state"]["after"] == "present"
+          - test_six.results[0]["diff"]["before"]["state"] == "absent"
+          - test_six.results[0]["diff"]["after"]["state"] == "present"
           - test_six.results[0]["device_type"] == 1
-          - test_six.results[1]["diff"]["state"]["before"] == "absent"
-          - test_six.results[1]["diff"]["state"]["after"] == "present"
+          - test_six.results[1]["diff"]["before"]["state"] == "absent"
+          - test_six.results[1]["diff"]["after"]["state"] == "present"
           - test_six.results[1]["device_type"] == 2
-          - test_six.results[2]["diff"]["state"]["before"] == "absent"
-          - test_six.results[2]["diff"]["state"]["after"] == "present"
+          - test_six.results[2]["diff"]["before"]["state"] == "absent"
+          - test_six.results[2]["diff"]["after"]["state"] == "present"
           - test_six.results[2]["device_type"] == 4
-          - test_six.results[3]["diff"]["state"]["before"] == "absent"
-          - test_six.results[3]["diff"]["state"]["after"] == "present"
+          - test_six.results[3]["diff"]["before"]["state"] == "absent"
+          - test_six.results[3]["diff"]["after"]["state"] == "present"
           - test_six.results[3]["device_type"] == 3
