--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 tests/output/*
 venv/
 .vscode/
+docs/_build/*
 
 # https://github.com/ansible/ansible/issues/68499
 # ansible_collections/
