Inventory: Pass netbox version to inventory integration tests (#203)
This is required to ignore comparing the rack_groups host var on NetBox 2.7.

There is no good way to do this - the Ansible blog recently recommended writing a file inside the test target directory.
https://www.ansible.com/blog/adding-integration-tests-to-ansible-content-collections

--- a/.travis.yml
+++ b/.travis.yml
@@ -119,6 +119,11 @@ before_script:
   # https://github.com/ansible/ansible/issues/68415
   - chmod +x tests/integration/targets/inventory/runme.sh
   - chmod +x tests/integration/targets/inventory/compare_inventory_json.py
+  - chmod +x tests/integration/render_config.sh
+
+  # Run render_config.sh to pass environment variables to integration tests
+  # https://www.ansible.com/blog/adding-integration-tests-to-ansible-content-collections
+  - tests/integration/render_config.sh tests/integration/targets/inventory/runme_config.template > tests/integration/targets/inventory/runme_config
 
 script:
   # Check python syntax
