--- a/galaxy.yml
+++ b/galaxy.yml
@@ -47,10 +47,10 @@ tags:
 # range specifiers can be set and are separated by ','
 dependencies:
   # Required for ipaddress python library
-  ansible.netcommon: "*"
+  ansible.netcommon: ">=1.0.0"
 
   # Required for json_query used in lookup plugin integration tests
-  community.general: "*"
+  community.general: ">=1.0.0"
 
 # The URL of the originating SCM repository
 repository: https://github.com/netbox-community/ansible_modules
