Updated changelog and added the .plugin-cache.yaml to .gitignore - Remaining item is attempt to fix all sanity tests for my own sanity

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 tests/output/*
 venv/
 .vscode/
+changelogs/.plugin-cache.yaml
 
 # https://github.com/ansible/ansible/issues/68499
 # ansible_collections/
