--- a/tests/integration/targets/inventory/files/test-inventory-options-flatten.yml
+++ b/tests/integration/targets/inventory/files/test-inventory-options-flatten.yml
@@ -3,6 +3,13 @@ api_endpoint: "http://localhost:32768"
 token: "0123456789abcdef0123456789abcdef01234567"
 validate_certs: False
 
+# Use cache on this test to make sure interfaces is tested via the cache
+cache: True
+cache_timeout: 3600
+cache_plugin: jsonfile
+cache_connection: /tmp/inventory_netbox
+
+
 config_context: True
 flatten_config_context: True
 flatten_custom_fields: True
