Fixed per Felix's recommomendation

--- a/.travis.yml
+++ b/.travis.yml
@@ -73,27 +73,27 @@ jobs:
         - source hacking/env-setup
         - cd  ..
 
-    - name: "Ansible 2.10 Preparation"
-      python: 3.8
-      env: INTEGRATION_TESTS=latest
-      install:
-        - pip install -U pip "setuptools>=46.1.3"
-        - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
-        - pip install pynetbox cryptography jmespath jsondiff ansible-base
-      before_script:
-        - ls
-        - cd ..
-        - mkdir -p ~/ansible_collections/$COLLECTION_NAMESPACE
-        - cp -R ansible_modules ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
-        - cd ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
-        - ansible-galaxy collection build .
-        - ansible-galaxy collection install $COLLECTION_NAMESPACE-$COLLECTION_NAME-$COLLECTION_VERSION.tar.gz -p /home/travis/.ansible/collections
-
+        # Commenting out, but keeping for next PR to work on sanity issues
+        #- name: "Ansible 2.10 Preparation"
+        #  python: 3.8
+        #  env: INTEGRATION_TESTS=latest
+        #  install:
+        #    - pip install -U pip "setuptools>=46.1.3"
+        #    - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
+        #    - pip install pynetbox cryptography jmespath jsondiff ansible-base
+        #  before_script:
+        #    - ls
+        #    - cd ..
+        #    - mkdir -p ~/ansible_collections/$COLLECTION_NAMESPACE
+        #    - cp -R ansible_modules ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
+        #    - cd ~/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
+        #    - ansible-galaxy collection build .
+        #    - ansible-galaxy collection install $COLLECTION_NAMESPACE-$COLLECTION_NAME-$COLLECTION_VERSION.tar.gz -p /home/travis/.ansible/collections
         # Run all further tests from within the installed directory
         # Required to resolve imports of other collections
-        - cd /home/travis/.ansible/collections/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
-      script:
-        - ansible-test sanity --docker -v --exclude tests/ --exclude docs/ --skip-test pep8
+        #- cd /home/travis/.ansible/collections/ansible_collections/$COLLECTION_NAMESPACE/$COLLECTION_NAME
+      #script:
+      #  - ansible-test sanity --docker -v --exclude tests/ --exclude docs/ --skip-test pep8
   allow_failures:
     # When testing against dev netbox and dev ansible, allow failures
     - env: PYTHON_VER=3.8 VERSION=snapshot INTEGRATION_TESTS=latest
