--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ jobs:
         - docker-compose pull
         - docker-compose up -d
         - cd ..
+        - pip install -U pip
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
         - pip install pynetbox cryptography codecov jmespath jsondiff ansible
@@ -47,6 +48,7 @@ jobs:
         - docker-compose pull
         - docker-compose up -d
         - cd ..
+        - pip install -U pip
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
         - pip install pynetbox cryptography codecov jmespath jsondiff ansible
@@ -65,6 +67,7 @@ jobs:
         - docker-compose pull
         - docker-compose up -d
         - cd ..
+        - pip install -U pip
         - pip install -U pip "setuptools>=46.1.3"
         - pip install pytest pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
         - pip install pynetbox cryptography jmespath jsondiff
