--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ jobs:
         - cd ..
         - pip install -U pip
         - pip install -U pip "setuptools>=46.1.3"
-        - pip install pytest pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
+        - pip install pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
         - pip install pynetbox cryptography codecov jmespath jsondiff ansible
 
     # Stick to python 3.7 instead of 3.8, as ansible-test sanity is not compatible with 3.7
@@ -50,7 +50,7 @@ jobs:
         - cd ..
         - pip install -U pip
         - pip install -U pip "setuptools>=46.1.3"
-        - pip install pytest pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
+        - pip install pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
         - pip install pynetbox cryptography codecov jmespath jsondiff ansible
 
     # Latest development versions of Netbox and Ansible, newest Python
@@ -69,7 +69,7 @@ jobs:
         - cd ..
         - pip install -U pip
         - pip install -U pip "setuptools>=46.1.3"
-        - pip install pytest pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
+        - pip install pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0 "coverage<5"
         - pip install pynetbox cryptography jmespath jsondiff
         - git clone https://github.com/ansible/ansible.git
         - cd ansible
