Final tasks for inclusion of netbox.netbox in Ansible 2.10 (#303)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 tests/output/*
 venv/
 .vscode/
+changelogs/.plugin-cache.yaml
 docs/_build/*
 
 # https://github.com/ansible/ansible/issues/68499
